--- a/fiscella/EOPAM 11/EOPAM 11.csproj
+++ b/fiscella/EOPAM 11/EOPAM 11.csproj
@@ -43,6 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IHumano.cs" />
+    <Compile Include="IPartido.cs" />
+    <Compile Include="Partido.cs" />
+    <Compile Include="Persona.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
