--- a/fiscella/EOPAM 14/EOPAM 14.csproj
+++ b/fiscella/EOPAM 14/EOPAM 14.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{83ED70C8-12CF-4ECF-89AD-768747FDF236}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>EOPAM_14</RootNamespace>
-    <AssemblyName>EOPAM_14</AssemblyName>
+    <AssemblyName>EOPAM 14</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
