--- a/fiscella/EOPAM 17/EOPAM 17.csproj
+++ b/fiscella/EOPAM 17/EOPAM 17.csproj
@@ -43,6 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Baraja.cs" />
+    <Compile Include="BarajaEspañola.cs" />
+    <Compile Include="BarajaFrancesa.cs" />
+    <Compile Include="Carta.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
