avances en formularios de la clase

--- a/fiscella/Reproductor MP3/Reproductor MP3.csproj
+++ b/fiscella/Reproductor MP3/Reproductor MP3.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8392D5A7-D24F-47CA-BFA9-DCF04F3E6EB6}</ProjectGuid>
+    <ProjectGuid>{A2B2659E-257A-4266-AA57-22C36867D790}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>editor_imagenes</RootNamespace>
-    <AssemblyName>editor imagenes</AssemblyName>
+    <RootNamespace>Reproductor_MP3</RootNamespace>
+    <AssemblyName>Reproductor_MP3</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -65,7 +65,6 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -79,9 +78,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\historial.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
